--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -1,12 +1,16 @@
-<ion-content [fullscreen]="true" class="ion-padding" >
+<ion-content [fullscreen]="true" class="ion-padding">
   <ion-toolbar>
-    <ion-title>Aperte Para Disparar o Alarme</ion-title>
+    <ion-title>Sobre o Botão de Pânico:</ion-title>
   </ion-toolbar>
-  <div class="centraliza-botao">
-    <ion-button class="botao-grande">
-      <ion-icon slot="icon-only" size="large" name="power-outline"></ion-icon>
-    </ion-button>
+  <div>
+  <p>O presente projeto propõe o desenvolvimento de um Sistema de Alerta para
+Pacientes com Doenças Crônicas, voltado para situações de emergência onde o
+paciente necessita de atendimento rápido por parte de um cuidador. O sistema
+utiliza uma integração entre Arduino Uno, módulo Bluetooth, aplicativo móvel
+(Ionic) e plataforma AWS, possibilitando o acionamento de alarmes locais e
+notificações remotas.</p>
   </div>
+
 </ion-content>
 
 <ion-footer collapse="fade" [translucent]="true">
@@ -19,12 +23,12 @@
     <ion-tab-button [routerLink]="['/home']" tab="2">
       <ion-icon name="home-outline"></ion-icon>
       <ion-label>Home</ion-label>
-      <ion-badge color="danger"></ion-badge>
     </ion-tab-button>
 
     <ion-tab-button [routerLink]="['/about']" tab="3">
       <ion-icon name="information-circle-outline"></ion-icon>
       <ion-label>Sobre</ion-label>
+      <ion-badge color="danger"></ion-badge>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-footer>
