--- a/src/app/news/news.page.html
+++ b/src/app/news/news.page.html
@@ -20,7 +20,7 @@
   <ion-tab-bar color="light">
     <ion-tab-button [routerLink]="['/news']" tab="1">
       <ion-icon name="earth-outline"></ion-icon>
-      <ion-label>Notícias</ion-label>
+      <ion-label>Dicas de Saúde</ion-label>
       <ion-badge color="danger"></ion-badge>
     </ion-tab-button>
 
