Adicionando estilo as paginas "Sobre" e "Dicas de Saúd"e e ícone ao aplicativo

--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true" class="ion-padding">
   <ion-toolbar>
-    <ion-title class="ion-text-center">Sobre o Botão de Pânico:</ion-title>
+    <ion-title class="ion-text-center">Botão de Emergência</ion-title>
   </ion-toolbar>
   <div>
   <p>O presente projeto propõe o desenvolvimento de um Sistema de Alerta para
@@ -9,7 +9,7 @@ paciente necessita de atendimento rápido por parte de um cuidador. </p>
 
     <p>O sistema
 utiliza uma integração entre Arduino Uno, módulo Bluetooth, aplicativo móvel
-(Ionic) e plataforma AWS, possibilitando o acionamento de alarmes locais e
+(Ionic) e plataforma Firebase, possibilitando o acionamento de alarmes locais e
 notificações remotas.
     </p>
   </div>
