--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content [fullscreen]="true" class="ion-padding" [class.connected]="connected" [class.emergency-active]="alarmeAtivo">
   <ion-toolbar>
-    <ion-title>{{ connected ? 'Aperte o Botão !' : 'Conecte ao Bluetooth' }}</ion-title>
+    <ion-title class="ion-text-center">{{ connected ? 'Acione o Botão!' : 'Conecte ao Bluetooth' }}</ion-title>
   </ion-toolbar>
 
   <!-- Card de Localização (somente quando alarme está ATIVO) -->
