Alterando cor do dispositivo exibido

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -37,6 +37,7 @@
         justify-content: center;
         flex-wrap: wrap;
         margin-bottom: 8px;
+        color: #3a7
       "
     >
       <ion-button (click)="listarDispositivos()" [disabled]="scanning">
